syntax = "proto3";

package withdrawal_iface;

option go_package = "./withdrawal_iface;withdrawal_iface";

service WithdrawalService {
    rpc SubmitWithdrawal(SubmitWdRequest) returns (CommonResponse);
    rpc GetTaskList(TaskListRequest) returns (TaskListResponse);
}

message TaskListRequest {
    uint64 team_id = 1;
    string status = 2;
}

message TaskListResponse {
    repeated TaskItem items = 1;
}

message TaskItem {
    string filename = 1;
    string status = 2;
    
}


message SubmitWdRequest {
    string filename = 1;
    bytes content = 2;
}

message CommonResponse {
    string message = 1;
}
